tests/ui/pattern/slice-patterns-irrefutable.stderr
error[E0282]: type annotations needed
  --> $DIR/slice-patterns-irrefutable.rs:45:6
   |
LL |     [a, b] = Default::default();
   |      ^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
